<?xml version="1.0"?>
<package format="2">
  <name>imrt_teleop</name>
  <version>0.0.1</version>
  <description>A virtual gamepad</description>

  <maintainer email="lars.grimstad@nmbu.no">Lars Grimstad</maintainer>
  <author email="fetulahatas1@gmail.com">Fetullah Atas</author>

  <license>MIT</license>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
