<?xml version="1.0"?>
<package format="2">
  <name>imrt_virtual_joy</name>
  <version>0.0.1</version>
  <description>A virtual gamepad</description>

  <maintainer email="lars.grimstad@nmbu.no">Lars Grimstad</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    </export>
</package>
